MAJOR: Everything is working

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,10 @@
 body {
   background-color: #fff;
 }
+.carousel-item img {
+  max-width: 100%;
+}
+.carousel-control-prev,
+.carousel-control-next {
+  cursor: pointer;
+}
