MAJOR: Updated to the components

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@ body {
   max-width: 100%;
 }
 .carousel-control-prev,
-.carousel-control-next {
+.carousel-control-next,
+.nav-item {
   cursor: pointer;
 }
